--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>WindowKill_Phase1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>WindowKill_Phase2</artifactId>
+    <version>2.0-MODEL</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.locationtech.jts/jts-core -->
@@ -78,7 +78,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>your.main.class</mainClass>
+                            <mainClass>org.example</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
